# bulk-rename

./: .ai-instructions.md  .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: SECURITY_SCANNING.md  copilot-instructions.md
.github/workflows/: ci.yml
bulk_rename/: __init__.py  main.py
tests/: __init__.py  test_bulk_rename.py
